# oshin-lab-infra

./: .flake8  Dockerfile  README.md  config.py  docker-bake.hcl  firebase.py  home.py  make_index.py  mcp_config.json  poetry.toml  pyproject.toml  test.sh
.devcontainer/: devcontainer.json
.github/workflows/: script-test.yml
pages/: bigquery.py  mcp.py  multimodal.py  requirements_doc_agent.py
